objects/nFORCE__Answer__c.object
<CustomObject>
    <description>This object stores the value of the user&apos;s questionnaire responses.</description>
    <fields>
        <fullName>CF_Collateral_Mgmt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is used in the appraisal review form.</description>
        <label>Collateral Mgmt</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It automatically populates. It relates an answer to a relationship/account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It automatically populates. It relates an answer to a contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is manually populated. This field specifies the deposit that these answers are associated with.</description>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is manually populated. This field specifies the loan that these answers are associated with.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Answer__c</fullName>
        <description>This field is not required and is automatically populated when answering a question in the questionnaire. It stores the plain text answer a user provided for the associated question.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Archived_Date__c</fullName>
        <description>This field should be manually populated when nForce__Is_Archived__c is enabled. It stores the date in which the answer was archived.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Archived Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Context_Id__c</fullName>
        <description>This field is required. It automatically populates. It is the ID record that the answer relates to.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Context_Owner_Id__c</fullName>
        <description>This field is required. It automatically populates. It is a soft reference to the record owner in context.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Context Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Currency_Answer__c</fullName>
        <description>Users populate this optional currency field for Questionnaire questions that need a currency value as the answer. By default, it is blank.</description>
        <inlineHelpText>Enter the currency value for this configurable questionnaire field.</inlineHelpText>
        <label>Currency Answer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFORCE__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required and is automatically populated when answering a question in the questionnaire. This field specifies the question group this answer is associated with.</description>
        <label>Group</label>
        <referenceTo>nFORCE__Group__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually set. When enabled, it archives an answer so it is no longer available to a user. When disabled, the answer is available to a user to select. By default, it is disabled.</description>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Label__c</fullName>
        <description>-DEPRECATED- Deprecated field, no longer in use, replaced by Answer__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Number_Answer__c</fullName>
        <description>Users populate this optional number field for Questionnaire questions that need a number value as the answer. By default, it is blank.</description>
        <inlineHelpText>Enter the numeric value for this configurable questionnaire field.</inlineHelpText>
        <label>Number Answer</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required and is automatically populated when answering a question in the questionnaire. This field associates the selected answer to the option selected in the questionnaire if the question is a picklist.</description>
        <label>Option</label>
        <referenceTo>nFORCE__Option__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is not required and is automatically populated when answering a question in the questionnaire. This field associates the selected answer to the question in the questionnaire.</description>
        <label>Question</label>
        <referenceTo>nFORCE__Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>nFORCE__Group__c</columns>
        <columns>NAME</columns>
        <columns>nFORCE__Label__c</columns>
        <columns>nFORCE__Context_Id__c</columns>
        <columns>nFORCE__Context_Owner_Id__c</columns>
        <columns>nFORCE__Option__c</columns>
        <columns>nFORCE__Question__c</columns>
        <columns>nFORCE__Is_Archived__c</columns>
        <columns>nFORCE__Archived_Date__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Contact__c</columns>
        <columns>LLC_BI__Deposit__c</columns>
        <columns>LLC_BI__Loan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nFORCE__Group__c</field>
            <operation>contains</operation>
            <value>HMDA</value>
        </filters>
        <filters>
            <field>LLC_BI__Loan__c</field>
            <operation>contains</operation>
            <value>christopher brown</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>